--- a/modules/ROOT/pages/blogs/entry/announce-apache-netbeans-12-0.adoc
+++ b/modules/ROOT/pages/blogs/entry/announce-apache-netbeans-12-0.adoc
@@ -27,7 +27,7 @@
 :description: Apache NetBeans blog index
 :toc: left
 :toc-title:
-:syntax: true
+:page-syntax: true
 
 
 Apache NetBeans 12.0 adds support for the latest Java language features, integrates new code donations from Oracle for Java Web development, 
