--- a/modules/ROOT/pages/blogs/entry/duke-s-choice-award-2018.adoc
+++ b/modules/ROOT/pages/blogs/entry/duke-s-choice-award-2018.adoc
@@ -27,7 +27,7 @@
 :description: Apache NetBeans blog index
 :toc: left
 :toc-title:
-:syntax: true
+:page-syntax: true
 :imagesdir: https://netbeans.apache.org
 
 During Oracle Open World 2018, Apache NetBeans was awarded a Duke's Choice Award, 
