--- a/modules/ROOT/pages/blogs/entry/php-conditional-breakpoints-and-new.adoc
+++ b/modules/ROOT/pages/blogs/entry/php-conditional-breakpoints-and-new.adoc
@@ -27,7 +27,7 @@
 :description: Apache NetBeans blog index
 :toc: left
 :toc-title:
-:syntax: true
+:page-syntax: true
 :experimental:
 :imagesdir: https://netbeans.apache.org
 
