--- a/modules/ROOT/pages/blogs/entry/restructuring-of-project-templates-in.adoc
+++ b/modules/ROOT/pages/blogs/entry/restructuring-of-project-templates-in.adoc
@@ -27,7 +27,7 @@
 :description: Apache NetBeans blog index
 :toc: left
 :toc-title:
-:syntax: true
+:page-syntax: true
 :imagesdir: https://netbeans.apache.org
 
 There's been lots of discussion in the Apache NetBeans community about how best to express the fact that 
