--- a/modules/ROOT/pages/blogs/entry/towards-fair-trade-for-foss.adoc
+++ b/modules/ROOT/pages/blogs/entry/towards-fair-trade-for-foss.adoc
@@ -27,7 +27,7 @@
 :description: Apache NetBeans 18 release
 :toc: left
 :toc-title:
-:syntax: true
+:page-syntax: true
 :imagesdir: https://netbeans.apache.org
 
 As part of being involved in Apache, I got the opportunity yesterday to go to Brussels 
