--- a/modules/ROOT/pages/blogs/entry/announce-apache-netbeans-11-3.adoc
+++ b/modules/ROOT/pages/blogs/entry/announce-apache-netbeans-11-3.adoc
@@ -27,7 +27,7 @@
 :description: Apache NetBeans blog index
 :toc: left
 :toc-title:
-:syntax: true
+:page-syntax: true
 
 
 The Apache NetBeans team is pleased to announce the release of Apache NetBeans 11.3. 
