--- a/modules/ROOT/pages/blogs/entry/announce-apache-netbeans-12-1.adoc
+++ b/modules/ROOT/pages/blogs/entry/announce-apache-netbeans-12-1.adoc
@@ -27,7 +27,7 @@
 :description: Apache NetBeans blog index
 :toc: left
 :toc-title:
-:syntax: true
+:page-syntax: true
 
 
 The Apache NetBeans team is pleased to announce that Apache NetBeans 12.1 was released on Sept 1st 2020. 
