--- a/modules/ROOT/pages/blogs/entry/announce-apache-netbeans-12-6.adoc
+++ b/modules/ROOT/pages/blogs/entry/announce-apache-netbeans-12-6.adoc
@@ -27,7 +27,7 @@
 :description: Apache NetBeans blog index
 :toc: left
 :toc-title:
-:syntax: true
+:page-syntax: true
 
 
 The Apache NetBeans team is pleased to announce that Apache NetBeans 12.6 was released on November 29th 2021. Apache NetBeans is a full IDE for Java SE, Java EE, PHP, JavaScript, HTML5 and more, including some support for Groovy and C/C++.
