--- a/modules/ROOT/pages/blogs/entry/netbeans-status-at-infoq.adoc
+++ b/modules/ROOT/pages/blogs/entry/netbeans-status-at-infoq.adoc
@@ -27,7 +27,7 @@
 :description: Apache NetBeans blog index
 :toc: left
 :toc-title:
-:syntax: true
+:page-syntax: true
 :imagesdir: https://netbeans.apache.org
 
 Today an article was published on InfoQ describing the current state and progress of Apache NetBeans.
