--- a/modules/ROOT/pages/blogs/entry/php-7-3-support.adoc
+++ b/modules/ROOT/pages/blogs/entry/php-7-3-support.adoc
@@ -27,7 +27,7 @@
 :description: Apache NetBeans blog index
 :toc: left
 :toc-title:
-:syntax: true
+:page-syntax: true
 :imagesdir: https://netbeans.apache.org
 
 
