--- a/modules/ROOT/pages/blogs/entry/simplified-apache-netbeans-welcome-screen.adoc
+++ b/modules/ROOT/pages/blogs/entry/simplified-apache-netbeans-welcome-screen.adoc
@@ -27,7 +27,7 @@
 :description: NetBeans at Oracle Code One 2019
 :toc: left
 :toc-title:
-:syntax: true
+:page-syntax: true
 :imagesdir: https://netbeans.apache.org
 
 
