--- a/modules/ROOT/pages/blogs/entry/when-will-apache-netbeans-12.adoc
+++ b/modules/ROOT/pages/blogs/entry/when-will-apache-netbeans-12.adoc
@@ -27,7 +27,7 @@
 :description: Apache NetBeans blog index
 :toc: left
 :toc-title:
-:syntax: true
+:page-syntax: true
 
 
 Apache NetBeans 12.0 will be released once many people:
