--- a/modules/ROOT/pages/download/index.adoc
+++ b/modules/ROOT/pages/download/index.adoc
@@ -30,7 +30,7 @@ for important requirements for download pages for Apache projects.
 :keywords: Apache NetBeans releases
 :icons: font
 :description: Apache NetBeans Releases Page
-:syntax: true
+:page-syntax: true
 :source-highlighter: pygments
 :experimental:
 :linkattrs:
