--- a/modules/ROOT/pages/download/nb13/index.adoc
+++ b/modules/ROOT/pages/download/nb13/index.adoc
@@ -26,7 +26,7 @@
 :toc: left
 :toc-title:
 :toclevels: 4
-:syntax: true
+:page-syntax: true
 :source-highlighter: pygments
 :experimental:
 :linkattrs:
