--- a/modules/ROOT/pages/jackpot/index.adoc
+++ b/modules/ROOT/pages/jackpot/index.adoc
@@ -22,7 +22,7 @@
 :jbake-status: published
 :keywords: Apache NetBeans, Jackpot, refactoring, Java
 :icons: font
-:syntax: true
+:page-syntax: true
 :description: Java Declarative Hints
 :source-highlighter: pygments
 
