--- a/modules/ROOT/pages/download/nb20/index.adoc
+++ b/modules/ROOT/pages/download/nb20/index.adoc
@@ -23,24 +23,24 @@ See https://www.apache.org/dev/release-download-pages.html
 for important requirements for download pages for Apache projects.
 
 ////
-= Downloading Apache NetBeans 19
+= Downloading Apache NetBeans 20
 :page-layout: page_noaside
 :page-tags: download
 :jbake-status: published
-:keywords: Apache NetBeans 19 Download
-:description: Apache NetBeans 19 Download
+:keywords: Apache NetBeans 20 Download
+:description: Apache NetBeans 20 Download
 :toc: left
 :toc-title:
 :icons: font
 
 // check version above
-:netbeans-version: 19
+:netbeans-version: 20
 
 // base URLs - when archiving, delete the next 2 lines and uncomment the following 2
-//:url-download: https://www.apache.org/dyn/closer.lua/netbeans/
-//:url-download-keychecksum: https://downloads.apache.org/netbeans/
-:url-download: https://archive.apache.org/dist/netbeans/
-:url-download-keychecksum: https://archive.apache.org/dist/netbeans/
+:url-download: https://www.apache.org/dyn/closer.lua/netbeans/
+:url-download-keychecksum: https://downloads.apache.org/netbeans/
+// :url-download: https://archive.apache.org/dist/netbeans/
+// :url-download-keychecksum: https://archive.apache.org/dist/netbeans/
 
 //// 
 url-download depends of release status archived or not
@@ -52,7 +52,7 @@ https://archive.apache.org/dist/netbeans/  (//archived)
 https://downloads.apache.org/netbeans/ (//current)
 ////
 
-Apache NetBeans {netbeans-version} was released on September 1, 2023.
+Apache NetBeans {netbeans-version} was released on December 1, 2023.
 ////
 NOTE: It's mandatory to link to the source. It's optional to link to the binaries.
 NOTE: It's mandatory to link against https://www.apache.org for the sums & keys. https is recommended.
@@ -99,14 +99,13 @@ link:https://github.com/apache/netbeans-nbpackage/[NBPackage]. Most
 include a local JDK runtime for the IDE to run on, for a self-contained out-of-the-box
 experience.
 
-
 IMPORTANT: Individual NetBeans committers may provide additional binary packages as a convenience.
 While built using the Apache NetBeans release, they are not releases of the Apache Software
 Foundation. They may include other contents (eg. JDK) under additional license terms.
 
 == Deployment Platforms
 
-The Apache NetBeans {netbeans-version} binary releases require JDK 11+, and officially support running on JDK 11, 17 and 20.
+The Apache NetBeans {netbeans-version} binary releases require JDK 11+, and officially support running on JDK 11, 17 and 21.
 
 TIP: The Runtime JDK NetBeans uses does not influence the JDK range projects can use.
 
@@ -133,8 +132,8 @@ in a directory of your liking.
 As in any other Apache Project, the Apache NetBeans Community approved this release
 through the following voting processes in our xref:community/mailing-lists.adoc[mailing lists]:
 
-- link:https://lists.apache.org/thread/3656879p6bfb1bb2vd0gh66jl711chhr[PMC vote]
-- link:https://lists.apache.org/thread/dfjrbnq7opbb60m3vcvorkcm9hokkqsn[PMC vote result]
+- link:https://lists.apache.org/thread/nszffw9mhlrst0ftxt2p539qhpvq7jzt[PMC vote]
+- link:https://lists.apache.org/thread/4qstkggoqfbj7s07yvg3omd52vs7hg6n[PMC vote result]
 
 == Earlier Releases
 
